fix white space syntax

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,4 +3,6 @@ $blue-color: #00acdc;
 $dark-blue-color: #060b35;
 $card-width: 200px;
 $margin-right: 48px;
-$container-width: 4 * $card-width + 3 * $margin-right;
+$cards-number: 4;
+$gaps-number: 3;
+$container-width: $cards-number * $card-width + $gaps-number * $margin-right;
